src/test/resources/parse/reject/multilineString.ul
int id1 ()
{
    "str
    ing";
}
